Fixing issues with themes, code blocks, scrollbars, and other random stuff (#518)
* fixing issues: theme selector scope, code theme selector on html, code styles, scrollbar styles

* moved close button above tabs

* No initial flash for color theme, server-side handling in entry-server.tsx

* improve theme cookie

---------

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,10 +11,34 @@ html {
 }
 
 @layer base {
-	.custom-scrollbar {
-		scrollbar-color: #334155 #cbd5e1;
-		scrollbar-width: thin;
+	/* Scroll bar */
+	.custom-scrollbar::-webkit-scrollbar-track {
+		@apply bg-transparent;
 	}
+
+	.custom-scrollbar::-webkit-scrollbar {
+		@apply w-5 h-5 bg-slate-200/80 rounded-xl border-[6px] border-solid border-transparent;
+		background-clip: content-box;
+	}
+	.dark .custom-scrollbar::-webkit-scrollbar {
+		@apply bg-slate-600/60;
+	}
+
+	.custom-scrollbar::-webkit-scrollbar-thumb {
+		@apply bg-slate-600/70 rounded-xl border-[6px] border-solid border-transparent;
+		background-clip: content-box;
+	}
+	.dark .custom-scrollbar::-webkit-scrollbar-thumb {
+		@apply bg-slate-400/90;
+	}
+
+	.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+		@apply bg-slate-600;
+	}
+	.dark .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+		@apply bg-slate-200/70;
+	}
+	
 
 	.prose h1,
 	.prose h2 {
